src/layouts/doc-layout/doc-layout.module.scss
.wrapper {
  display: flex;
  min-height: 100vh;
  max-width: 1600px;
  width: 100vw;
}

.controls {
  margin-left: auto;
  margin-right: 10px;
}

.sidebar-header {
  padding: 20px 20px 14px 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;

  @include md-down {
    flex-direction: column;
    align-items: flex-start;
    padding-bottom: 10px;
  }
}

.sidebar {
  // guarantee the space for absolutely positioned footer
  // in case sidebar height === page height
  padding-bottom: 63px;
  width: 270px;
  flex-shrink: 0;
  background-color: $color-additional-3;
  border-right: 1px solid $color-additional-2;
  @include lg-down {
    width: 230px;
  }
  @include md-down {
    width: 195px;
  }
  @include sm-down {
    display: none;
  }
}
.header-nav {
  // to display JS API nested menu above search
  z-index: 1;
}
.search-box {
  padding-bottom: 5px;
}
.dropdown-wrapper {
  box-shadow: $light-block-shadow;
  position: relative;
  &:after {
    content: '';
    position: absolute;
    right: 15px;
    top: calc(50% - 2.5px);
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid $color-secondary;
    width: 0px;
    height: 0px;
    opacity: 0.5;
  }
}
.dropdown {
  appearance: none;
  cursor: pointer;
  border-radius: 0;
  border: 1px solid $color-secondary;
  padding: 12px 40px 11px 15px;
  width: 100%;
  background: transparent;
  font-size: $font-size-sm;
  line-height: $line-height-sm;
  color: $color-primary;
  font-weight: 500;
  outline: none;
  transition: 0.3s border-color;
  &::-moz-focusring {
    border: none;
  }
  &:focus {
    border-color: $color-accent-primary;
  }
}

.sidebar-title {
  display: inline-block;
  font-size: $font-size-xl;
  line-height: $line-height-xl;
  font-weight: 700;
  color: $color-secondary;
  padding-top: 20px;
  padding-left: 20px;
  padding-right: 20px;

  @include lg-down {
    font-size: $font-size-lg;
    line-height: $line-height-lg;
  }
}

.sidebar-section {
  padding: 15px 20px;
  border-bottom: 1px solid $color-additional-2;
  font-size: $font-size-sm;
  line-height: $line-height-sm;
}

.sidebar-footer {
  display: flex;
  position: fixed;
  bottom: 0;
  justify-content: space-between;
  align-items: center;
  background-color: $color-additional-3;
  border-top: 1px solid $color-additional-2;
  width: 269px;
  @include lg-down {
    width: 229px;
  }
  @include md-down {
    width: 194px;
  }
}

// bumping specifity
h2.sidebar-section-title {
  margin-bottom: 8px;
  text-align: start;
  text-transform: none;

  // updated styles
  font-weight: 600;
  font-size: $font-size-sm;
  line-height: $line-height-sm;
  color: #9c97b5;
}

.sidebar-section-title-link {
  text-decoration: none;
  color: $color-secondary;
  transition: 0.3s ease;
  font-weight: 600;
  &:hover {
    color: $color-accent-primary;
    border-color: rgba(90, 92, 135, 0.5);
  }
}

.sidebar-node {
  position: relative;
}

.sidebar-node-title {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-decoration: none;
  color: $color-primary;
  transition: font-weight 0.3s;
  font-size: $font-size-sm;
  line-height: $line-height-sm;

  margin-bottom: 5px;

  &.active {
    color: $color-accent-primary;
    font-weight: 500;
  }

  &:hover {
    color: $color-accent-primary;
  }
}

.sidebar-node-children {
  padding-left: 12px;
}

a.sidebar-link {
  color: $color-secondary;
  font-weight: 500;
}

.sidebar-arrow {
  position: absolute;
  right: 0;
  top: 2px;
  pointer-events: none;

  &-active {
    transform: rotate(90deg);
  }
}

.main {
  position: relative;
  margin: 0 50px;
  max-width: 1175px;
  width: calc(100% - 370px);
  display: flex;
  flex-direction: column;
  @include lg-down {
    max-width: calc(100% - 330px); // respecting sidebar width and margins
    width: calc(100% - 330px);
  }
  @include md-down {
    max-width: calc(100% - 240px); // respecting sidebar width and margins
    width: calc(100% - 240px);
    margin: 0 25px;
  }
  @include sm-down {
    width: 100%;
    max-width: 100%;
    margin: 0 auto;
  }
}

